sfdx-source/main/default/objects/Activity/fields/CallKeyCallID__c.field-meta.xml
<CustomField>
    <fullName>CallKeyCallID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CallKeyCallID</label>
    <type>TextArea</type>
</CustomField>