sfdx-source/main/default/objects/Activity/fields/cnx__UniqueId__c.field-meta.xml
<CustomField>
    <fullName>cnx__UniqueId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>UniqueId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>