sfdx-source/main/default/objects/Activity/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <description>Used to show the full name of the user that created the record.</description>
    <formula>CreatedBy.FirstName +&apos; &apos;+ CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By</label>
    <type>Text</type>
</CustomField>