sfdx-source/main/default/objects/Activity/fields/Is_Owner__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner__c</fullName>
    <description>Returns whether the Activity record is owned by the current User.</description>
    <formula>OwnerId = $User.Id</formula>
    <label>Is Owner</label>
    <type>Checkbox</type>
</CustomField>