sfdx-source/main/default/objects/Activity/fields/TED_Additional_Task_Resolution__c.field-meta.xml
<CustomField>
    <fullName>TED_Additional_Task_Resolution__c</fullName>
    <description>Additional tasks required for a resolution</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Task Resolution</label>
    <type>TextArea</type>
</CustomField>