sfdx-source/main/default/objects/Activity/fields/TED_Facility__c.field-meta.xml
<CustomField>
    <fullName>TED_Facility__c</fullName>
    <description>Veteran&apos;s registered Facility.</description>
    <formula>VCC_Case__r.TUC_Assigned_Facility__r.Common_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>When a Task is created this field will auto populate from the related Case record the Facility where the patient is located.</inlineHelpText>
    <label>Facility</label>
    <type>Text</type>
</CustomField>