sfdx-source/main/default/objects/Activity/fields/TED_Task_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>TED_Task_Order_Date__c</fullName>
    <description>Date a Task was created</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Task Order Date</label>
    <type>Date</type>
</CustomField>