sfdx-source/main/default/objects/Activity/fields/TED_VISN_Number__c.field-meta.xml
<CustomField>
    <fullName>TED_VISN_Number__c</fullName>
    <formula>IF (ISBLANK(VCC_Case__c),
				value (mid(CreatedBy.Division,6,2)),
VCC_Case__r.TUC_Assigned_VISN__c
				
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VISN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>