sfdx-source/main/default/objects/Activity/fields/VCC_Call_Direction__c.field-meta.xml
<CustomField>
    <fullName>VCC_Call_Direction__c</fullName>
    <description>Indicates whether the softphone call is Incoming or Outbound</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Indicates whether the softphone call is Incoming or Outbound</inlineHelpText>
    <label>Call Direction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>