sfdx-source/main/default/objects/Activity/fields/VCC_Call_Hour__c.field-meta.xml
<CustomField>
    <fullName>VCC_Call_Hour__c</fullName>
    <description>The hour of day (1-24) this call was received.</description>
    <formula>TEXT( CASE( VALUE(LEFT(RIGHT(text(CreatedDate),FIND(&quot; &quot;, TEXT( CreatedDate ))-2),2)), 00,19, 01,20, 02,21, 03,22, 04,23, 05,00, 06,01, 07,02, 08,03, 09,04,
        10,05, 11,06, 12,07, 13,08, 14,09, 15,10, 16,11, 17,12, 18,13, 19,14, 20,15, 21,16, 22,17, 23,18, 00 ) )</formula>
    <inlineHelpText>The hour of day (1-24) this call was received.</inlineHelpText>
    <label>Call Hour</label>
    <type>Text</type>
</CustomField>