sfdx-source/main/default/objects/Activity/fields/VCC_Call_Reason__c.field-meta.xml
<CustomField>
    <fullName>VCC_Call_Reason__c</fullName>
    <description>Indicate if caller is a Veteran who is not enrolled, not registered, or if it is a Humanitarian/Non-Veteran call.</description>
    <inlineHelpText>Indicate if caller is a Veteran who is not enrolled, not registered, or if it is a Humanitarian/Non-Veteran call.</inlineHelpText>
    <label>Call Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non_Veteran</fullName>
                <label>Non-Veteran</label>
            </value>
            <value>
                <fullName>Veteran</fullName>
            </value>
            <value>
                <fullName>Enrollment</fullName>
                <isActive>false</isActive>
                <label>Enrollment</label>
            </value>
            <value>
                <fullName>Humanitarian</fullName>
                <isActive>false</isActive>
                <label>Humanitarian</label>
            </value>
            <value>
                <fullName>Veteran Call</fullName>
                <isActive>false</isActive>
                <label>Veteran Call</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>