sfdx-source/main/default/objects/Activity/fields/VCC_Call_Type__c.field-meta.xml
<CustomField>
    <fullName>VCC_Call_Type__c</fullName>
    <description>An internal debugging field for calls coming through the softphone. Maps to the Bucher + Suter variable &quot;callVariable3&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Used for debugging of calls coming through the softphone.</inlineHelpText>
    <label>VAHC Call Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>