sfdx-source/main/default/objects/Activity/fields/VCC_Caller_Relation_to_Veteran__c.field-meta.xml
<CustomField>
    <fullName>VCC_Caller_Relation_to_Veteran__c</fullName>
    <description>The relation that the person calling the Contact Center has to the patient (veteran)</description>
    <inlineHelpText>The relation that the person calling the Contact Center has to the patient (veteran)</inlineHelpText>
    <label>Caller Relation to Veteran - not used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Relative</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>