sfdx-source/main/default/objects/Activity/fields/VCC_Caller_Wait_Time__c.field-meta.xml
<CustomField>
    <fullName>VCC_Caller_Wait_Time__c</fullName>
    <description>The amount of time that the caller waits before the call is answered through the softphone. Maps to the Bucher + Suter variable &quot;callVariable6)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The amount of time that the caller waits before the call is answered through the softphone.</inlineHelpText>
    <label>Caller Wait Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>