sfdx-source/main/default/objects/Activity/fields/VCC_Caller_Wait_Time_Seconds__c.field-meta.xml
<CustomField>
    <fullName>VCC_Caller_Wait_Time_Seconds__c</fullName>
    <description>The amount of time that the caller waits before the call is answered through the soft phone. Maps to the Bucher + Suter variable &quot;callVariable6)</description>
    <formula>(VALUE(MID(VCC_Caller_Wait_Time__c, 4, 2))*60) + VALUE(RIGHT(VCC_Caller_Wait_Time__c, 2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of seconds a caller waited in the queue before the call was answered.</inlineHelpText>
    <label>Caller Wait Time (Seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>