sfdx-source/main/default/objects/Activity/fields/VCC_Is_MP__c.field-meta.xml
<CustomField>
    <fullName>VCC_Is_MP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean: True if user is MP, False if otherwise</description>
    <label>VCC_Is_MP</label>
    <type>Checkbox</type>
</CustomField>