sfdx-source/main/default/objects/Activity/fields/VCC_isMyVISN__c.field-meta.xml
<CustomField>
    <fullName>VCC_isMyVISN__c</fullName>
    <description>Used for List View of VCV Tasks by VISN. If the current user VISN matched the VISN on the task, the checkbox will automatically be checked.</description>
    <formula>IF ( VISN__c = $User.Division, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isMyVISN</label>
    <type>Checkbox</type>
</CustomField>