sfdx-source/main/default/objects/Activity/fields/VCC_IVR_Queue_ID__c.field-meta.xml
<CustomField>
    <fullName>VCC_IVR_Queue_ID__c</fullName>
    <description>ID number of Queue from the CTI</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>ID number of Queue from the CTI</inlineHelpText>
    <label>IVR Queue ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>