sfdx-source/main/default/objects/Activity/fields/VCC_IVR_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>VCC_IVR_Queue_Name__c</fullName>
    <description>Developer Name of the Call Queue</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Developer Name of the Call Queue</inlineHelpText>
    <label>IVR Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>