sfdx-source/main/default/objects/Activity/fields/VCC_Language__c.field-meta.xml
<CustomField>
    <fullName>VCC_Language__c</fullName>
    <description>The language of the caller calling into the softphone. English or Spanish. Maps to the Bucher + Suter variable &quot;callVariable8&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The language of the caller calling into the softphone. English or Spanish</inlineHelpText>
    <label>Language</label>
    <length>50</length>
    <type>Text</type>
</CustomField>