sfdx-source/main/default/objects/Activity/fields/VCC_Last_4_of_SSN__c.field-meta.xml
<CustomField>
    <fullName>VCC_Last_4_of_SSN__c</fullName>
    <description>Used to bring in the last 4 of the SSN when VCV Follow-up tasks are created.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last 4 of SSN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>