sfdx-source/main/default/objects/Activity/fields/VCC_Name__c.field-meta.xml
<CustomField>
    <fullName>VCC_Name__c</fullName>
    <description>The name of the person calling on behalf of the patient</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the person calling on behalf of the patient</inlineHelpText>
    <label>Caller Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>