sfdx-source/main/default/objects/Activity/fields/VCC_Number_of_Calls__c.field-meta.xml
<CustomField>
    <fullName>VCC_Number_of_Calls__c</fullName>
    <description>Power of One</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>