sfdx-source/main/default/objects/Activity/fields/VCC_Queue__c.field-meta.xml
<CustomField>
    <fullName>VCC_Queue__c</fullName>
    <description>The name of the Call Center that the softphone caller is calling from. E.g. Scheduling. Maps to the Bucher + Suter variable &quot;callVariable5&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the Call Center that the softphone caller is calling from. E.g. Scheduling</inlineHelpText>
    <label>Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>