sfdx-source/main/default/objects/Activity/fields/VCC_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>VCC_Recommendation__c</fullName>
    <description>Recommendation for Humanitarian or Enrollment Caller.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Recommendation for Humanitarian or Enrollment Caller.</inlineHelpText>
    <label>Recommendation</label>
    <type>TextArea</type>
</CustomField>