sfdx-source/main/default/objects/Activity/fields/VCC_Relative_Type__c.field-meta.xml
<CustomField>
    <fullName>VCC_Relative_Type__c</fullName>
    <description>Enter the Relative Type if Other is chosen</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the Relative Type if Other is chosen</inlineHelpText>
    <label>Other Caller Relation to Veteran</label>
    <length>80</length>
    <type>Text</type>
</CustomField>