sfdx-source/main/default/objects/Activity/fields/VCC_Relative_Type_Picklist__c.field-meta.xml
<CustomField>
    <fullName>VCC_Relative_Type_Picklist__c</fullName>
    <description>The specific type of relative that the caller is to the patient they are calling about</description>
    <inlineHelpText>The type of relative that the caller is to the patient they are calling about</inlineHelpText>
    <label>Caller Relation to Veteran</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Caregiver</fullName>
            </value>
            <value>
                <fullName>Power of Attorney</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Anonymous</fullName>
                <isActive>false</isActive>
                <label>Anonymous</label>
            </value>
            <value>
                <fullName>Aunt</fullName>
                <isActive>false</isActive>
                <label>Aunt</label>
            </value>
            <value>
                <fullName>Daughter</fullName>
                <isActive>false</isActive>
                <label>Daughter</label>
            </value>
            <value>
                <fullName>Father</fullName>
                <isActive>false</isActive>
                <label>Father</label>
            </value>
            <value>
                <fullName>Home Health</fullName>
                <isActive>false</isActive>
                <label>Home Health</label>
            </value>
            <value>
                <fullName>Internal Review Only</fullName>
                <isActive>false</isActive>
                <label>Internal Review Only</label>
            </value>
            <value>
                <fullName>Mother</fullName>
                <isActive>false</isActive>
                <label>Mother</label>
            </value>
            <value>
                <fullName>Neighbor</fullName>
                <isActive>false</isActive>
                <label>Neighbor</label>
            </value>
            <value>
                <fullName>Not Applicable2</fullName>
                <isActive>false</isActive>
                <label>Not Applicable2</label>
            </value>
            <value>
                <fullName>Psychiatrist</fullName>
                <isActive>false</isActive>
                <label>Psychiatrist</label>
            </value>
            <value>
                <fullName>Sibling</fullName>
                <isActive>false</isActive>
                <label>Sibling</label>
            </value>
            <value>
                <fullName>Son</fullName>
                <isActive>false</isActive>
                <label>Son</label>
            </value>
            <value>
                <fullName>Spouse</fullName>
                <isActive>false</isActive>
                <label>Spouse</label>
            </value>
            <value>
                <fullName>Uncle</fullName>
                <isActive>false</isActive>
                <label>Uncle</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>