sfdx-source/main/default/objects/Activity/fields/VCC_SSN__c.field-meta.xml
<CustomField>
    <fullName>VCC_SSN__c</fullName>
    <description>SSN of Caller if the caller is not found in the system.Use format 999-99-9999.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>SSN of Caller if the caller is not found in the system.Use format 999-99-9999.</inlineHelpText>
    <label>SSN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>